# libvmod-parsereq

./: .gitignore  COPYING  Makefile.am  README.rst  configure.ac
src/: Makefile.am  vmod_parsepost.c  vmod_parsepost.vcc  vmod_parsereq.c  vmod_parsereq.h  vmod_parsereq.vcc  vmod_parsereq_core.c  vmod_postparse.c  vmod_postparse.vcc  vmod_req.h
src/tests/: cookie.php  cookie2.php  get.php  get2.php  post_urlencode.php  post_urlencode2.php  test01.vtc  test02.vtc  test02_x.vtc  test03.vtc  test03_x.vtc  test04.vtc  test05.vtc  test_01_COOKIE_CUR.vtc  test_01_COOKIE_SIZE.vtc  test_01_COOKIE_iterate.vtc  test_01_GET_CUR.vtc  test_01_GET_SIZE.vtc  test_01_GET_iterate.vtc  test_01_MAIN.vtc  test_01_POST_CUR.vtc  test_01_POST_SIZE.vtc  test_01_POST_iterate.vtc  test_01_POST_multipart.vtc  test_01_POST_unknown_contenttype.vtc  test_01_SEEK.vtc  test_01_post_multi_nofile.vtc  test_02_AUTO_iterate.vtc  test_02_COOKIE_00001.vtc  test_02_COOKIE_00002.vtc  test_02_COOKIE_00003.vtc  test_02_COOKIE_00004.vtc  test_02_COOKIE_00005.vtc  test_02_COOKIE_00006.vtc  test_02_COOKIE_00007.vtc  test_02_COOKIE_00008.vtc  test_02_COOKIE_00009.vtc  test_02_COOKIE_00010.vtc  test_02_COOKIE_CUR.vtc  test_02_COOKIE_SIZE.vtc  (+105 more)
